app/_styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --color-bg: #000000;
  --color-text-primary: #ffffff;
  --color-text-pale: #c9c9c9;
  --color-border-primary: #374151;
  --color-accent-primary: #15803d;
  --color-accent-secondary: #0c4b23;
  --color-accent-hover: #22c55e;
}

@layer components {
  .logo {
    @apply text-3xl font-extrabold relative hover:before:opacity-0;
    @apply before:transition-secondary before:absolute before:bg-green-700 before:h-6 before:blur-[2px] before:w-10 before:rounded-md before:bottom-0 before:-z-10;
  }
}

@layer utilities {
  .transition-primary {
    @apply transition ease-in-out duration-300;
  }

  .transition-secondary {
    @apply transition ease-in-out duration-500;
  }

  .col-center {
    @apply flex flex-col justify-center items-center;
  }

  .row-center {
    @apply flex flex-row justify-center items-center;
  }

  .heading-md {
    @apply font-semibold text-lg sm:text-xl md:text-2xl lg:text-3xl;
  }

  .heading-md--extrabold {
    @apply font-extrabold text-lg sm:text-xl md:text-2xl lg:text-3xl;
  }

  .heading-xl {
    @apply font-extrabold text-4xl sm:text-6xl md:text-7xl lg:text-8xl;
  }
}

html,
body {
  height: 100%;
}

body {
  color: var(--color-text-primary);
  font-weight: 400;
  background-color: var(--color-bg);
  display: flex;
  flex-direction: column;
}

.box {
  width: 150px;
  height: 150px;
  border-radius: 50%;
  background: var(--color-accent-primary);
}

